...
  static const accessPermissions = 'Access & Permissions';
  static const students = 'Students';
  static const studentOversight = 'Student Oversight';
  static const staff = 'Staff';
  static const staffOversight = 'Staff Oversight';
  static const attendance = 'Attendance';
  static const approvalCenter = 'Approval Center';
  static const fees = 'Fees';
  static const feeMonitoring = 'Fee Monitoring';
  static const timetable = 'Timetable';
  static const timetableRecords = 'Timetable Records';
  static const academics = 'Academics';
  static const academicInfo = 'Academic Info';
  static const academicManagement = 'Academic Management';
  static const academicRecords = 'Academic Records';
  static const communication = 'Communication';
  static const communicationCenter = 'Communication Center';
  static const complaints = 'Complaints';
...
