...
              route: AppRoutes.principalChatCommunications,
            ),
            SchoolDeskNavigationItem(
              index: 18,
              icon: Icons.check_circle_outline,
              activeIcon: Icons.check_circle_rounded,
              label: 'Event Approvals',
              route: AppRoutes.principalEventApprovals,
            ),
            SchoolDeskNavigationItem(
              index: 8,
              icon: Icons.support_agent_outlined,
              activeIcon: Icons.support_agent_rounded,
...
