appId: com.techmigos.schooldesk1
---
- launchApp:
    clearState: true
- runFlow: subflows/login_teacher.yaml
- extendedWaitUntil:
    visible: "Quick Actions"
    timeout: 20000
- scrollUntilVisible:
    element: "Post Homework"
    direction: DOWN
    timeout: 15000
- tapOn: "Post Homework"
- extendedWaitUntil:
    visible: "Homework / Assignments"
    timeout: 20000
- tapOn: "Assign Homework"
- extendedWaitUntil:
    visible: "Assign Homework"
    timeout: 20000
- back
- scrollUntilVisible:
    element: "Lesson Planner"
    direction: DOWN
    timeout: 15000
- tapOn: "Lesson Planner"
- extendedWaitUntil:
    visible: "Lesson Planner"
    timeout: 20000
- back
- scrollUntilVisible:
    element: "Event Posts"
    direction: DOWN
    timeout: 15000
- tapOn: "Event Posts"
- extendedWaitUntil:
    visible: "Event Posts"
    timeout: 20000
- assertVisible: "Create Post"
- launchApp:
    clearState: true
- runFlow: subflows/login_principal.yaml
- extendedWaitUntil:
    visible: "Academics"
    timeout: 20000
- scrollUntilVisible:
    element: "Lesson Planners"
    direction: DOWN
    timeout: 20000
- tapOn: "Lesson Planners"
- extendedWaitUntil:
    visible: "Lesson Planners"
    timeout: 20000
- back
- scrollUntilVisible:
    element: "Event Approvals"
    direction: DOWN
    timeout: 20000
- tapOn: "Event Approvals"
- extendedWaitUntil:
    visible: "Event Approvals"
    timeout: 20000
- assertVisible: "No event approvals pending"
